--- a/src/comps/top-nav/topNav.css
+++ b/src/comps/top-nav/topNav.css
@@ -2,8 +2,6 @@
   width: 100vw;
   height: 150px;
 
-  position: absolute; /* stay at the top */
-
   border-top: 2px solid salmon;
   border-bottom: 2px solid salmon;
 
@@ -11,7 +9,7 @@
   grid-template-columns: 200px auto 200px;
   grid-template-rows: 100%;
 }
-
+/* 
 .topnav-wrapper > * {
   border: 2px solid paleturquoise;
-}
+} */
