--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-color: white;
   height: 100vh;
   width: 100vw;
 
   font-size: calc(10px + 2vmin);
-  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #282c34;
 }
