--- a/src/comps/top-nav/topNav.css
+++ b/src/comps/top-nav/topNav.css
@@ -1,13 +1,30 @@
 .topnav-wrapper {
   width: 100vw;
-  height: 150px;
+  height: 100px;
 
-  border-top: 2px solid salmon;
-  border-bottom: 2px solid salmon;
+  /* border-top: 2px solid salmon;
+  border-bottom: 2px solid salmon; */
 
   display: grid;
   grid-template-columns: 200px auto 200px;
   grid-template-rows: 100%;
+}
+
+.topnav-wrapper .title-holder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.topnav-wrapper .logo-holder {
+  display: flex;
+
+  justify-content: center;
+  align-items: center;
+}
+
+.topnav-wrapper .logo-holder img {
+  height: 64px;
 }
 /* 
 .topnav-wrapper > * {
