--- a/src/comps/board/board.css
+++ b/src/comps/board/board.css
@@ -15,9 +15,10 @@
 
   border-radius: 2px;
 
-  background-color: #171717;
+  background-color: #070705;
 
-  /* border: 2px solid yellowgreen; */
+  border-right: 8px solid #3b3b3b;
+  border-bottom: 8px solid #3b3b3b;
 }
 
 .board-wrapper .the-board .board-header {
@@ -62,4 +63,33 @@
 
 .board-wrapper .the-board .board-main-content {
   height: calc(100% - 70px);
+}
+
+.board-wrapper .the-board .board-table {
+  width: 100%;
+  color: white;
+}
+
+.board-wrapper .the-board .board-table tbody {
+  color: #eceba0;
+}
+
+.board-wrapper .the-board .board-table tbody tr {
+  background-color: #171717;
+}
+
+.board-wrapper .the-board .board-table tbody td {
+  text-align: left;
+}
+
+.board-wrapper .the-board .board-table tbody .status-td-good {
+  color: #e6fb5e;
+}
+
+.board-wrapper .the-board .board-table tbody .status-td-bad {
+  color: #ffe5be;
+}
+
+.board-wrapper .the-board .board-table .table-header {
+  color: white;
 }
