--- a/src/comps/main-buttons/mainButtons.css
+++ b/src/comps/main-buttons/mainButtons.css
@@ -2,14 +2,21 @@
   width: 100vw;
   height: 150px;
 
-  border-top: 2px solid salmon;
-  border-bottom: 2px solid salmon;
+  /* border-top: 2px solid salmon;
+  border-bottom: 2px solid salmon; */
 
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 100%;
 }
-/* 
-.main-buttons-wrapper > * {
-  border: 2px solid paleturquoise;
-} */
+
+.main-buttons-wrapper .line-button-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid paleturquoise; */
+}
+
+.main-buttons-wrapper .line-button-wrapper > *:hover {
+  cursor: pointer;
+}
