--- a/src/comps/board/board.css
+++ b/src/comps/board/board.css
@@ -17,8 +17,30 @@
 
   background-color: #070705;
 
-  border-right: 8px solid #3b3b3b;
+  /* border-right: 8px solid #3b3b3b; */
   border-bottom: 8px solid #3b3b3b;
+
+  overflow: auto;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #3b3b3b;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #eceba0;
 }
 
 .board-wrapper .the-board .board-header {
@@ -80,6 +102,7 @@
 
 .board-wrapper .the-board .board-table tbody td {
   text-align: left;
+  border-radius: 2px;
 }
 
 .board-wrapper .the-board .board-table tbody .status-td-good {
@@ -92,4 +115,8 @@
 
 .board-wrapper .the-board .board-table .table-header {
   color: white;
+}
+
+.board-wrapper .the-board .board-table .table-header th {
+  border-radius: 2px;
 }
