--- a/src/comps/loading-subway/loadingSubway.css
+++ b/src/comps/loading-subway/loadingSubway.css
@@ -16,7 +16,7 @@
 }
 
 .subway-wrapper {
-  height: 100%;
+  height: calc(100% - 70px);
 }
 
 .subway-wrapper .loading-text {
@@ -40,4 +40,37 @@
   100% {
     transform: translateY(0%);
   }
+}
+
+@keyframes appear {
+  0% {
+    color: white;
+  }
+  50% {
+    color: white;
+  }
+  100% {
+    color: black;
+  }
+}
+
+.period-one {
+  animation-name: appear;
+  animation-duration: 2s;
+  animation-delay: 0s;
+  animation-iteration-count: infinite;
+}
+
+.period-two {
+  animation-name: appear;
+  animation-duration: 2s;
+  animation-delay: 0.5s;
+  animation-iteration-count: infinite;
+}
+
+.period-three {
+  animation-name: appear;
+  animation-duration: 2s;
+  animation-delay: 1s;
+  animation-iteration-count: infinite;
 }
