--- a/src/comps/top-nav/topNav.css
+++ b/src/comps/top-nav/topNav.css
@@ -2,9 +2,6 @@
   width: 100vw;
   height: 100px;
 
-  /* border-top: 2px solid salmon;
-  border-bottom: 2px solid salmon; */
-
   display: grid;
   grid-template-columns: 200px auto 200px;
   grid-template-rows: 100%;
@@ -23,10 +20,32 @@
   align-items: center;
 }
 
-.topnav-wrapper .logo-holder img {
+.topnav-wrapper .logo-holder svg {
   height: 64px;
+  cursor: pointer;
 }
-/* 
-.topnav-wrapper > * {
-  border: 2px solid paleturquoise;
-} */
+
+a:hover {
+  cursor: default;
+}
+
+.topnav-wrapper .logo-holder svg:hover {
+  animation-name: grow;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  animation-duration: 300ms;
+  fill: #464242;
+}
+
+.title {
+  font-family: 'Courier New', monospace;
+}
+
+@keyframes grow {
+  from {
+    height: 64px;
+  }
+  to {
+    height: 68px;
+  }
+}
